--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,142 @@
+aiodns==3.1.1
+aiofiles==24.1.0
+aiogram==3.20.0.post0
+aiohttp==3.9.3
+aiosignal==1.3.1
 aiosqlite==0.21.0
-annotated-types==0.7.0
-anyio==4.9.0
-click==8.2.1
-dnspython==2.7.0
+altair==5.5.0
+altgraph==0.17.4
+annotated-types==0.6.0
+anyio==4.2.0
+arrow==1.3.0
+asgiref==3.7.2
+async-timeout==5.0.1
+attrs==23.2.0
+binaryornot==0.4.4
+blinker==1.9.0
+cachetools==5.5.0
+ccxt==4.0.42
+certifi==2024.7.4
+cffi==1.16.0
+chardet==5.2.0
+charset-normalizer==3.3.2
+click==8.1.7
+cloudipsp==1.0.4
+colorama==0.4.6
+configobj==5.0.9
+contourpy==1.3.1
+cookiecutter==2.6.0
+cowsay==6.1
+cryptography==42.0.5
+cycler==0.12.1
+distro==1.9.0
+Django==5.0.1
+dnspython==2.6.1
+docutils==0.21.2
 email_validator==2.2.0
-fastapi==0.115.12
-greenlet==3.2.3
-h11==0.16.0
-idna==3.10
-pydantic==2.11.5
-pydantic_core==2.33.2
-sniffio==1.3.1
-SQLAlchemy==2.0.41
-starlette==0.46.2
-typing-inspection==0.4.1
-typing_extensions==4.14.0
-uvicorn==0.34.3
+fastapi==0.111.0
+fastapi-cli==0.0.4
+filetype==1.2.0
+Flask==3.1.0
+flask-cors==5.0.1
+flet==0.26.0
+flet-cli==0.26.0
+flet-desktop==0.26.0
+flet-web==0.26.0
+fonttools==4.55.1
+frozenlist==1.4.1
+gitdb==4.0.11
+GitPython==3.1.43
+greenlet==3.0.3
+h11==0.14.0
+httpcore==1.0.2
+httptools==0.6.1
+httpx==0.28.1
+idna==3.6
+iredis==1.15.0
+itsdangerous==2.2.0
+Jinja2==3.1.4
+joblib==1.4.2
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+Kivy==2.3.1
+Kivy-Garden==0.1.5
+kiwisolver==1.4.7
+macholib==1.16.3
+magic-filter==1.0.12
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+matplotlib==3.9.3
+mdurl==0.1.2
+mistune==3.1.2
+multidict==6.0.5
+narwhals==1.16.0
+numpy==1.26.3
+oauthlib==3.2.2
+openai==1.9.0
+opencv-python==4.9.0.80
+orjson==3.10.5
+packaging==23.2
+pandas==2.2.2
+pillow==10.2.0
+prompt_toolkit==3.0.50
+protobuf==5.29.1
+pyarrow==18.1.0
+pycares==4.4.0
+pycparser==2.21
+pydantic==2.5.3
+pydantic_core==2.14.6
+pydeck==0.9.1
+Pygments==2.18.0
+pyinstaller==6.11.1
+pyinstaller-hooks-contrib==2025.0
+pyparsing==3.2.0
+pypng==0.20220715.0
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+python-multipart==0.0.9
+python-slugify==8.0.4
+python-telegram-bot==22.1
+pytz==2023.3
+PyYAML==6.0.1
+qrcode==7.4.2
+redis==5.2.1
+referencing==0.35.1
+repath==0.9.0
+requests==2.31.0
+rich==13.7.1
+rpds-py==0.22.3
+scikit-learn==1.5.2
+scipy==1.14.1
+seaborn==0.13.2
+shellingham==1.5.4
+six==1.16.0
+smmap==5.0.1
+sniffio==1.3.0
+spark-parser==1.8.9
+SQLAlchemy==2.0.31
+sqlparse==0.4.4
+starlette==0.37.2
+streamlit==1.40.2
+tenacity==9.0.0
+text-unidecode==1.3
+threadpoolctl==3.5.0
+toml==0.10.2
+tornado==6.4.2
+tqdm==4.66.1
+typer==0.12.3
+types-python-dateutil==2.9.0.20241206
+typing_extensions==4.12.2
+tzdata==2024.1
+ujson==5.10.0
+uncompyle6==3.9.2
+urllib3==2.2.1
+uvicorn==0.30.1
+uvloop==0.19.0
+watchdog==4.0.2
+watchfiles==0.22.0
+wcwidth==0.1.9
+websockets==12.0
+Werkzeug==3.1.3
+xdis==6.1.4
+yarl==1.9.4
